--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "dotenv": "^16.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typeit-react": "^2.2.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
