--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
